--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,12 +1,17 @@
----
-jobs:
-  build:
-    runs-on: ubuntu-latest
-    steps:
-      "-run": "aws s3 sync dist s3://rahmati-static-bucket/"
-      "-uses": chrislennen/action-aws-cli@v1.1
 name: "deploy card list"
-true:
+
+on:
   push:
     branches:
       - master
+
+jobs:
+  build:
+    runs-on: ubuntu-latest
+
+    steps:
+      -uses: actions/checkout@v2
+      -run: npm install
+      -run: npm run build
+      -uses: chrislennen/action-aws-cli@v1.1
+      -run: aws s3 sync dist s3://rahmati-static-bucket/
