--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,4 +14,7 @@ jobs:
       - run: npm install
       - run: npm run build
       - uses: chrislennen/action-aws-cli@v1.1
-      - run: aws s3 sync dist s3://rahmati-static-bucket/
+      - run: aws s3 sync build s3://rahmati-static-bucket/
+      env:
+        AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
